--- a/WebBased/BlazorAppServer/Pages/Movies/MovieCreate.razor
+++ b/WebBased/BlazorAppServer/Pages/Movies/MovieCreate.razor
@@ -44,12 +44,17 @@
                         </div>
                         <div class="form-control">
                             <label for="ProducerId" class="form-label mt-4">ProducerId</label>
-                            <InputNumber class="form-control" @bind-Value="MV.ProducerId" rows="3" />
+                            <InputNumber class="form-control" @bind-Value="MV.ProducerId" rows="3">
+                                  @foreach (var cin in Producers)
+                                {
+                                    <option value="@cin.Id">@cin.FullName</option>
+                                }
+                            </InputNumber>
                             <ValidationMessage For="@(()=>MV.ProducerId)"></ValidationMessage>
                         </div>
                         <div class="form-control">
                             <label for="CinemaId" class="form-label mt-4">CinemaId</label>
-                            <select class="form-control"  multiple="MV.ActorIds" rows="3">
+                            <select class="form-control"  multiple="MV.ActorIds" rows="3" @onchange="ActorSelect_OnClicK">
                                 @foreach (var cin in Actors)
                                 {
                                     <option value="@cin.Id">@cin.FullName</option>
