--- a/WebBased/BlazorAppServer/Pages/Movies/MovieList.razor
+++ b/WebBased/BlazorAppServer/Pages/Movies/MovieList.razor
@@ -68,10 +68,11 @@
                                         <a class="btn btn-outline-primary float-right" href="@($"moviedetails/{item.Id}")">
                                             <i class="bi bi-eye-fill"></i> Show Details
                                         </a>
+                                        <a class="btn btn-outline-primary float-right" href="@($"moviecreate/{item.Id}")">
+                                            <i class="bi bi-eye-fill"></i> Update Movie
+                                        </a>
                                         <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
-                                   asp-controller="Orders"
-                                   asp-action="AddItemToShoppingCart"
-                                   asp-route-id="@item.Id">
+                                   href="@($"orders/{item.Id}")">
                                             <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))
                                         </a>
                                     </p>
