--- a/WebBased/BlazorAppServer/Pages/Movies/MovieList.razor
+++ b/WebBased/BlazorAppServer/Pages/Movies/MovieList.razor
@@ -66,10 +66,10 @@
                                 <div class="card-footer ">
                                     <p class="card-text">
                                         <a class="btn btn-outline-primary float-right" href="@($"moviedetails/{item.Id}")">
-                                            <i class="bi bi-eye-fill"></i> Show Details
+                                            <i class="btn btn-dark"></i> Show Details
                                         </a>
                                         <a class="btn btn-outline-primary float-right" href="@($"moviecreate/{item.Id}")">
-                                            <i class="bi bi-eye-fill"></i> Update Movie
+                                            <i class="btn btn-dark"></i> Update Movie
                                         </a>
                                         <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
                                    href="@($"orders/{item.Id}")">
