--- a/WebBased/BlazorAppServer/Pages/Movies/MovieList.razor
+++ b/WebBased/BlazorAppServer/Pages/Movies/MovieList.razor
@@ -73,7 +73,7 @@
                                            Update Movie
                                         </a>
                                         <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
-                                   href="@($"orders/{item.Id}")">
+                                   href="@($"shoppingcart/{item.Id}")">
                                             <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))
                                         </a>
                                     </p>
