--- a/WebBased/BlazorAppServer/Pages/_Host.cshtml
+++ b/WebBased/BlazorAppServer/Pages/_Host.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/"
 @namespace BlazorApp.Pages
 @using BlazorAppServer
+@using BlazorAppServer.SessionStorage
+@using Microsoft.JSInterop
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
