--- a/WebBased/BlazorAppServer/Pages/Orders/ShoppingCartView.razor
+++ b/WebBased/BlazorAppServer/Pages/Orders/ShoppingCartView.razor
@@ -26,9 +26,9 @@
                             <td class="align-middle">@item.Movie.Price.ToString("c")</td>
                             <td class="align-middle">@((item.Amount*item.Movie.Price).ToString("c"))</td>
                             <td class="align-middle">
-                                <a class="text-danger" @onclick="RemoveItemFromShoppingCart"> <i class="bi bi-cart-dash"></i></a>
+                                <a class="text-danger" @onclick="(() => RemoveItemFromShoppingCart(item.Movie.Id))"> <i class="bi bi-cart-dash"></i></a>
                                 |
-                                <a class="text-success" @onclick="AddItemToShoppingCart"><i class="bi bi-cart-plus"></i>
+                                <a class="text-success" @onclick="(() => AddItemToShoppingCart(item.Movie.Id))"> <i class="bi bi-cart-plus"></i>
                                 </a>
                             </td>
                         </tr>
