--- a/WebBased/BlazorAppServer/Pages/Orders/OrderCompleted.razor
+++ b/WebBased/BlazorAppServer/Pages/Orders/OrderCompleted.razor
@@ -1,4 +1,6 @@
-﻿<div class="row">
+﻿@page "/ordercomplete"
+
+<div class="row">
     <div class="col-md-6 offset-3 alert alert-success text-center">
         <h2>Order completed successfully</h2>
         <p>You can check all your orders in the Orders section of your profile</p>
